<resources>
    <string name="app_name">ArchiTec</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_styles">Styles</string>
    <string name="menu_classify">Classification</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="selected_picture">Selected picture</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="next">Next</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_architec">Welcome to ArchiTec</string>
    <string name="authorize_to_get_access_to_all_functions">Authorize to get access to all functions</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new Account</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="profile">Profile</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign up</string>
    <string name="welcome_back">Welcome back</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_accept_the_policy_and_terms">I accept the policy and terms</string>
    <string name="name">Name</string>
</resources>