<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateAccountActivity">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/teko_semibold"
            android:text="@string/create_account"
            android:textSize="32sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="121dp"
            android:layout_height="121dp"
            android:elevation="12dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/view2"
            app:cardCornerRadius="100dp"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9">
            <ImageView
                android:layout_height="121dp"
                android:layout_width="121dp"
                android:id="@+id/add_photo"
                android:layout_gravity="center"
                android:src="@drawable/add_profile_image"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/teko_light"
            android:textSize="18sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/teko_light"
            android:layout_marginHorizontal="20dp"
            android:textSize="18sp"
            android:layout_marginBottom="16dp"
            android:hint="@string/name" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/teko_light"
            android:layout_marginHorizontal="20dp"
            android:textSize="18sp"
            android:text="@string/email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_profile_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/teko_light"
            android:textSize="18sp"
            android:layout_marginBottom="24dp"
            android:hint="@string/email" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/teko_light"
            android:textSize="18sp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_profile_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/teko_light"
            android:textSize="18sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/password" />
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_accept_the_policy_and_terms"
            android:fontFamily="@font/teko_light"
            android:thumb="@drawable/thumb_background"
            app:track="@drawable/track_style"

            app:switchPadding="8dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/red_middle"
            android:fontFamily="@font/teko"
            android:letterSpacing="0.06"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:fontFamily="@font/teko"
                android:layout_marginEnd="8dp"/>
            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/red_middle"
                android:fontFamily="@font/teko"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>